crates/intertrait/tests/ui/unknown-flag.stderr
error: Unknown flag: send
 --> $DIR/unknown-flag.rs:5:18
  |
5 | #[cast_to([sync, send] Greet)]
  |                  ^^^^
